# service-template

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  LICENSE  README.md  pyproject.toml
.claude/: settings.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/actions/mise-install/: action.yml
.github/workflows/: _core.yml  ci.yml  deploy.yml  pr.yml
.mise/: config.toml
.mise/tasks/: build.sh  check.sh  dev.sh  fix.sh  test-unit.sh  test.sh  typecheck.sh
docs/: architecture.md  ci.md  commands.md  security.md  testing.md
src/: main.py
src/api/routes/: health.py  items.py
src/core/: auth.py  config.py  errors.py  logging.py
src/domain/: errors.py  item.py
src/repositories/: item.py
src/schemas/: item.py
src/services/: item.py
tests/: conftest.py
tests/integration/: test_error_handling.py  test_items_api.py
tests/integration/api/: test_health.py  test_items.py  test_request_id.py
tests/unit/: test_config.py  test_main.py
tests/unit/core/: test_auth.py
tests/unit/repositories/: test_item.py
tests/unit/schemas/: test_item.py
tests/unit/services/: test_item.py
